User-visible changes in version 0. .  (2005-  -  ):
* changing data title (title="new title here")

User-visible changes in version 0.5.1 (2005-07-21):
* new toolbar icons 
* data tranformations: treat "3 < x < 4" like "3 < x and x < 4"
* GUI data viewer - "Fit Zoom" button 


User-visible changes in version 0.5.0 (2005-06-09):
* d.load -- possibility of loading of only selected points from file 
            was removed (it can be done with d.tranform after loading)
            new option: adding data points from file to currently loaded data 
* d.transform  --  new quite powerful command for transforming data, 
  Commands d.deviation, d.range, d.background, d.calibrate, d.set were removed.
  Handling of background (and calibration) is now a little different.
* added Data Editor dialog and Data->Fast DT menu. 

User-visible changes in version 0.4.4 (2005-03-04):

* fixed Pseudo-Voigt formula in manual (program was not changed) (David Hovis)
* peak labels (above each peak) that can display peak area, position etc.
* fonts used for scale labels can be changed 
* data viewer (it is first step in implementing data editor)
* input field: up/down arrow keys work as in bash (wxComboBox was replaced
  by wxTextCtrl)
* optionally drawing sum and peaks as smooth curves (computed at every pixel)
* info about wxWidgets version in About box and --version switch for fityk-GUI. 

User-visible changes in version 0.4.3:

* wxWidgets 2.5 compatible
* data files (in addition to scripts) can be specified as command line 
  arguments to fityk-GUI. Scripts should either have .fit or .fityk extensions
  or start with "# Fityk" string. 
* crosshair cursor (GUI->Crosshair cursor)
* "Data->Load File" dialog (simple) allows to open many files 
* unix man page (Carlo Segre)

User-visible changes in version 0.4.2:

* "File" menu name was replaced with "Session", and "Manipulate" with "FindPeak"
* "s.info ^number" prints more informations.